--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,7 @@ li {
 .contacts {
   color: var(--footer-address);
   font-weight: normal;
+  font-style: normal;
   font-size: 14px;
   line-height: 1.7;
 }
